bug is fixed in header on mobile view

--- a/src/containers/header/header.scss
+++ b/src/containers/header/header.scss
@@ -119,6 +119,10 @@
           padding: 0;
           display: inline-block;
         }
+        .login-out {
+          padding: 0;
+          display: inline-block;
+        }
       }
       .header_spinner {
         margin-left: 2.4rem;
